--- a/views/agenti/index.ejs
+++ b/views/agenti/index.ejs
@@ -11,42 +11,46 @@
   <div class="col-md-10 col-lg-10 col-xl-10 mx-auto mt-3">
     <h6
       style="color: #160e3f"
-      class="mb-4 font-weight-bold text-center text-uppercase fs-1"
+      class="mb-4 font-weight-bold text-center fs-1 ivanFont3"
     >
       Naš Tim
     </h6>
-    <p class="text-center fs-5">
+    <p class="text-center fs-5 ivanFont">
       Slavica Jovanović, rad na organizaciji sa neposrednim izvršiocima. Preko
       20 godina iskustva na rukovodećim poslovima u administraciji,
       knjigovodstvu I IT zaštiti kompanijskih softvera, kao I podršci istima.
       Suvlasnik
     </p>
     <hr />
-    <p class="text-center fs-5">
+    <p class="text-center fs-5 ivanFont">
       Draško Jovanović, Strategija I realizacija. Više od 20 godina liderstva.
       Osnivač I direktor više firmi raznih formata I delatnosti, sa
       preokupacijom na prodaji. Suvlasnik
     </p>
     <hr />
-    <p class="text-center fs-5">
+    <p class="text-center fs-5 ivanFont">
       Jelena Drašković, 15 godina iskustva u Call Centrima, na pozicijama od
       operatera do rukovodioca CC. 5 godina iskustva na administrativnim
       poslovima, suvlasnik
     </p>
     <hr />
-    <p class="text-center fs-5">
+    <p class="text-center fs-5 ivanFont">
       Aleksandar Drašković, 15 godina iskustva u direktnoj prodaji, od pozicije
       prezentera do direktora prodaje, suvlasnik
     </p>
     <hr />
-    <p class="text-center fs-5">
+    <p class="text-center fs-5 ivanFont">
       Aleksa Karan, agent prodaje, svojom energijom za kratko vreme, postigao
       ogroman % realizacije u situacijama 1 na 1.
     </p>
     <hr />
-    <p class="text-center fs-5">Još 7 agenata prodaje koji čekaju licencu</p>
-    <p class="text-center fs-5">Spisak tek sledi u vremenu pred nama…………</p>
-    <p class="text-center fs-5">Sa nama ste bezbedni…………………….</p>
+    <p class="text-center fs-5 ivanFont">
+      Još 7 agenata prodaje koji čekaju licencu
+    </p>
+    <p class="text-center fs-5 ivanFont">
+      Spisak tek sledi u vremenu pred nama…………
+    </p>
+    <p class="text-center fs-5 ivanFont">Sa nama ste bezbedni…………………….</p>
   </div>
   <hr />
 
@@ -55,10 +59,10 @@
 
     <div class="col-md-6">
       <div class="p-1">
-        <div class="p-4 bg-body-tertiary border rounded-3 row">
+        <div class="p-4 bg-body border rounded-3 row">
           <div class="col-3">
             <img
-              src="/img/betterIcon.png"
+              src="/img/charIcon1.svg"
               alt=""
               width="80px"
               height="80px"
@@ -66,7 +70,9 @@
             />
           </div>
           <div class="col-9">
-            <p class="fs-5">Agent: <%= agent.name %> <%= agent.number %></p>
+            <p class="fs-4 ivanFont ivanPlava">
+              Agent: <%= agent.name %> <%= agent.number %>
+            </p>
             <div class="btn-group">
               <a
                 href="<%= agent.number %>"
