--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
 <footer
-  class="text-center text-lg-start text-white"
+  class="text-center text-lg-start text-white ivanFont3"
   style="background-color: #160e3f"
 >
   <!--style="background-color: #030223"-->
@@ -11,12 +11,12 @@
       <div class="row">
         <!-- Grid column -->
         <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
-          <h6 class="text-uppercase mb-4 font-weight-bold">O nama</h6>
+          <h6 class="mb-4 font-weight-bold fs-4 ivanFont">O nama</h6>
           <p>
-            Tim entuzijasta, koji su spremni da svoje dugogodisnje znanje iz
+            Tim entuzijasta, koji su spremni da svoje dugogodišnje znanje iz
             direktne prodaje I , od skora, investitorskih voda, upotrebe u
-            humanom konceptu posredovanja u prometu nekretnine, usrecujuci
-            klijente na WIN WIN nacin.
+            humanom konceptu posredovanja u prometu nekretnine, usrećujući
+            klijente na WIN WIN način.
           </p>
         </div>
         <!-- Grid column -->
@@ -25,9 +25,7 @@
 
         <!-- Grid column -->
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
-          <h6 class="text-uppercase mb-4 font-weight-bold">
-            Poslovna jedinica
-          </h6>
+          <h6 class="mb-4 font-weight-bold ivanFont fs-4">Poslovna jedinica</h6>
           <p>
             <a class="text-white">Nehruova 51, 11070 Novi Beograd, Srbija</a>
           </p>
@@ -56,17 +54,19 @@
 
         <!-- Grid column -->
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
-          <h6 class="text-uppercase mb-4 font-weight-bold">Mapa sajta</h6>
+          <h6 class="mb-4 font-weight-bold ivanFont fs-4">Mapa sajta</h6>
           <p><a class="text-white" href="../home">Početna</a></p>
           <p><a class="text-white" href="../stanovi">Stanovi</a></p>
-          <p><a class="text-white" href="/">Mapa</a></p>
+          <p><a class="text-white" href="/stanovi/mapa">Mapa</a></p>
           <p><a class="text-white" href="../agenti">Agenti</a></p>
         </div>
         <!-- Grid column -->
 
         <!-- Grid column -->
         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3 mb-1">
-          <h6 class="text-uppercase mb-4 font-weight-bold">Zapratite nas</h6>
+          <h6 class="text-uppercase mb-4 font-weight-bold ivanFont fs-5">
+            Zapratite nas
+          </h6>
 
           <!-- Facebook -->
           <a
