--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -5,9 +5,11 @@
   >
     <div class="container">
       <a class="navbar-brand" href="#!"
-        ><span style="color: #5e9693">Bedem</span
-        ><span style="color: #fff">Nekretnine</span></a
-      >
+        ><img
+          style="height: 50px; width: 100%; color: #030223"
+          src="/img/logo1.svg"
+          alt=""
+      /></a>
       <button
         class="navbar-toggler"
         type="button"
@@ -31,7 +33,7 @@
             <a class="nav-link" href="/agenti">Agenti</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/mapa">Mapa</a>
+            <a class="nav-link" href="/stanovi/mapa">Mapa</a>
           </li>
         </ul>
         <ul class="navbar-nav d-flex flex-row">
