--- a/views/agenti/index.ejs
+++ b/views/agenti/index.ejs
@@ -57,7 +57,7 @@
   <div class="row mb-3">
     <% for (let agent of agenti) {%>
 
-    <div class="col-md-6">
+    <div class="col-lg-6">
       <div class="p-1">
         <div class="p-4 bg-body border rounded-3 row">
           <div class="col-3">
@@ -71,11 +71,11 @@
           </div>
           <div class="col-9">
             <p class="fs-4 ivanFont ivanPlava">
-              Agent: <%= agent.name %> <%= agent.number %>
+              Agent: <%= agent.name %> <%= agent.mobile %>
             </p>
             <div class="btn-group">
               <a
-                href="<%= agent.number %>"
+                href="tel:<%= agent.mobile %>"
                 class="btn btn-outline-light dugme"
                 type="button"
               >
@@ -83,11 +83,20 @@
               </a>
               <a
                 class="btn btn-outline-light dugmeDrugo text-uppercase"
-                href="<%= agent.number %>"
+                href="tel:<%= agent.mobile %>"
                 type="button"
               >
                 Pozovi
               </a>
+              <% if(currentUser && agent.author.equals(currentUser._id)){ %>
+              <form
+                class="d-inline"
+                action="/agenti/<%= agent._id %>?_method=DELETE"
+                method="POST"
+              >
+                <button class="btn dugmeCrveno">Izbrisi</button>
+              </form>
+              <% } %>
             </div>
           </div>
         </div>
