--- a/views/home.ejs
+++ b/views/home.ejs
@@ -136,7 +136,7 @@
           <!--Grid row-->
           <div class="row">
             <!-- Grid column -->
-            <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+            <div class="col-md-6 col-lg-3 col-xl-3 mx-auto mt-3">
               <h6 class="mb-4 font-weight-bold fs-4 ivanFont">O nama</h6>
               <p>
                 Tim entuzijasta, koji su spremni da svoje dugogodisnje znanje iz
@@ -150,7 +150,7 @@
             <hr class="w-100 clearfix d-md-none" />
 
             <!-- Grid column -->
-            <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+            <div class="col-md-6 col-lg-3 col-xl-3 mx-auto mt-3">
               <h6 class="mb-4 font-weight-bold fs-4 ivanFont">
                 Poslovna jedinica
               </h6>
@@ -183,7 +183,7 @@
             <hr class="w-100 clearfix d-md-none" />
 
             <!-- Grid column -->
-            <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+            <div class="col-md-6 col-lg-2 col-xl-2 mx-auto mt-3">
               <h6 class="mb-4 font-weight-bold fs-4 ivanFont">Mapa sajta</h6>
               <p><a class="text-white" href="/">Početna</a></p>
               <p><a class="text-white" href="/stanovi">Stanovi</a></p>
@@ -193,14 +193,14 @@
             <!-- Grid column -->
 
             <!-- Grid column -->
-            <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3">
+            <div class="col-md-6 col-lg-2 col-xl-2 mx-auto mt-3">
               <h6 class="mb-4 font-weight-bold fs-4 ivanFont">Zapratite nas</h6>
 
               <!-- Facebook -->
               <a
                 class="btn btn-primary btn-floating m-1"
                 style="background-color: #3b5998"
-                href="#!"
+                href="https://www.facebook.com/profile.php?id=61553189891315&mibextid=LQQJ4d"
                 role="button"
                 ><i class="fab fa-facebook-f"></i
               ></a>
@@ -209,7 +209,7 @@
               <a
                 class="btn btn-primary btn-floating m-1"
                 style="background-color: #ac2bac"
-                href="#!"
+                href="https://instagram.com/nekretninebedem?igshid=NzZlODBkYWE4Ng=="
                 role="button"
                 ><i class="fab fa-instagram"></i
               ></a>
@@ -218,7 +218,7 @@
               <a
                 class="btn btn-primary btn-floating m-1"
                 style="background-color: #b2071d"
-                href="#!"
+                href="https://www.youtube.com/@BedemNekretnine"
                 role="button"
                 ><i class="fab fa-youtube"></i
               ></a>
