--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -10,7 +10,7 @@
       <!--Grid row-->
       <div class="row">
         <!-- Grid column -->
-        <div class="col-md-3 col-lg-3 col-xl-3 mx-auto mt-3">
+        <div class="col-md-6 col-lg-3 col-xl-3 mx-auto mt-3">
           <h6 class="mb-4 font-weight-bold fs-4 ivanFont">O nama</h6>
           <p>
             Tim entuzijasta, koji su spremni da svoje dugogodišnje znanje iz
@@ -24,7 +24,7 @@
         <hr class="w-100 clearfix d-md-none" />
 
         <!-- Grid column -->
-        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mt-3">
+        <div class="col-md-6 col-lg-3 col-xl-3 mx-auto mt-3">
           <h6 class="mb-4 font-weight-bold ivanFont fs-4">Poslovna jedinica</h6>
           <p>
             <a class="text-white">Nehruova 51, 11070 Novi Beograd, Srbija</a>
@@ -53,7 +53,7 @@
         <hr class="w-100 clearfix d-md-none" />
 
         <!-- Grid column -->
-        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mt-3">
+        <div class="col-md-6 col-lg-2 col-xl-2 mx-auto mt-3">
           <h6 class="mb-4 font-weight-bold ivanFont fs-4">Mapa sajta</h6>
           <p><a class="text-white" href="../home">Početna</a></p>
           <p><a class="text-white" href="../stanovi">Stanovi</a></p>
@@ -63,7 +63,7 @@
         <!-- Grid column -->
 
         <!-- Grid column -->
-        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mt-3 mb-1">
+        <div class="col-md-6 col-lg-2 col-xl-2 mx-auto mt-3 mb-1">
           <h6 class="text-uppercase mb-4 font-weight-bold ivanFont fs-5">
             Zapratite nas
           </h6>
@@ -72,7 +72,7 @@
           <a
             class="btn btn-primary btn-floating m-1"
             style="background-color: #3b5998"
-            href="#!"
+            href="https://www.facebook.com/profile.php?id=61553189891315&mibextid=LQQJ4d"
             role="button"
             ><i class="fab fa-facebook-f"></i
           ></a>
@@ -81,7 +81,7 @@
           <a
             class="btn btn-primary btn-floating m-1"
             style="background-color: #ac2bac"
-            href="#!"
+            href="https://instagram.com/nekretninebedem?igshid=NzZlODBkYWE4Ng=="
             role="button"
             ><i class="fab fa-instagram"></i
           ></a>
@@ -90,7 +90,7 @@
           <a
             class="btn btn-primary btn-floating m-1"
             style="background-color: #b2071d"
-            href="#!"
+            href="https://www.youtube.com/@BedemNekretnine"
             role="button"
             ><i class="fab fa-youtube"></i
           ></a>
