--- a/views/partials/search.ejs
+++ b/views/partials/search.ejs
@@ -10,135 +10,147 @@
 </div>
 <% }%>
 
-<form class="mt-4">
+<div class="mt-4 container">
+  <div class="mt-3 ivanFont">
+    <h3 class="fs-2 ivanPlava">Pronađite svoj dom</h3>
+  </div>
+
+  <hr />
+
+  <div class="container text-center my-3"></div>
+
   <div class="container">
-    <div class="mt-3 ivanFont">
-      <h3 class="fs-2 ivanPlava">Pronađite svoj dom</h3>
-    </div>
-    <div class="mt-3 inputs">
-      <input
-        type="text"
-        class="form-control"
-        placeholder="Država, Grad, Adresa, ID"
-        style="color: black"
-      />
-      <i class="fa fa-search"></i>
-    </div>
+    <div class="row g-5">
+      <!--Forma-->
+      <form class="needs-validation" novalidate="">
+        <div class="row g-3">
+          <div class="col-12 col-md-6 col-xl-3">
+            <select class="form-select" id="nrbitno" required="">
+              <option value="" selected>Kupujem/Zakupljujem...</option>
+              <option>Kupujem</option>
+              <option>Zakupljujem</option>
+            </select>
+          </div>
 
-    <div class="container text-center my-3">
-      <div class="row">
-        <div class="col-md-12">
-          <button type="button" class="btn btn-outline-primary m-1 dugme">
-            Kupi
-          </button>
-          <button type="button" class="btn btn-outline-primary m-1 dugme">
-            Kupi bez provizije
-          </button>
-          <button type="button" class="btn btn-outline-primary m-1 dugme">
-            Zakupi
-          </button>
-          <button type="button" class="btn btn-outline-primary m-1 dugme">
-            Prodaj
-          </button>
-          <button type="button" class="btn btn-outline-primary m-1 dugme">
-            Cenovni rang
-          </button>
-          <button type="button" class="btn btn-outline-primary m-1 dugme">
-            Struktura
-          </button>
-          <button type="button" class="btn btn-outline-primary m-1 dugme">
-            Sortiraj
-          </button>
-          <button type="button" class="btn btn-outline-primary m-1 dugme">
-            Filteri
-          </button>
+          <div class="col-12 col-md-6 col-xl-3">
+            <select class="form-select" id="state" required="">
+              <option value="">Tip nekretnine...</option>
+              <option>Stan</option>
+              <option>Kuća</option>
+              <option>Zemljište</option>
+              <option value="">Poslovni prostor</option>
+            </select>
+          </div>
+
+          <div class="col-12 col-md-6 col-xl-3">
+            <select class="form-select" id="country" required="">
+              <option value="" selected>Lokacija...</option>
+              <% for( let stan of stanovi) { %>
+              <option value=""><%= stan.location %></option>
+              <% } %>
+            </select>
+          </div>
+
+          <div class="col-12 col-md-6 col-xl-3">
+            <select class="form-select" id="provizija" required="">
+              <option value="" selected>Broj soba...</option>
+              <option value="">0.5</option>
+              <option value="">1.0</option>
+              <option value="">1.5</option>
+              <option value="">2.0</option>
+              <option value="">2.5</option>
+              <option value="">3.0</option>
+              <option value="">3.5</option>
+              <option value="">4.0</option>
+              <option value="">4.5</option>
+              <option value="">5.0</option>
+            </select>
+          </div>
         </div>
+
+        <hr />
+
+        <div>
+          <p class="ivanFont ivanPlava fs-6">
+            Cena do: <span id="sliderValue">20000</span>
+            <i class="bi bi-currency-euro"></i>
+          </p>
+          <input
+            type="range"
+            min="10000"
+            max="1000000"
+            value="20000"
+            step="2000"
+            class="slider"
+            id="myRange"
+          />
+        </div>
+
+        <hr class="my-4" />
+
+        <button class="w-100 btn btn-primary btn-lg dugmeDrugo" type="submit">
+          Pretraži
+        </button>
+      </form>
+    </div>
+  </div>
+
+  <hr class="my-4" />
+
+  <div class="container text-center mb-3">
+    <div class="row justify-content-end">
+      <div class="col-6 col-md-4 col-lg-4 col-xl-3 col-xxl-2">
+        <button type="button" class="btn btn-outline-primary dugme">
+          Kupi bez provizije
+        </button>
       </div>
-    </div>
-
-    <hr />
-
-    <div class="container text-center my-3"></div>
-
-    <div class="container">
-      <div class="row g-5">
-        <div class="col-md-7 col-lg-8">
-          <form class="needs-validation" novalidate="">
-            <div class="row g-3">
-              <div class="col-md-5">
-                <select class="form-select" id="country" required="">
-                  <option value="" selected>Sa provizijom</option>
-                  <option>Bez provizije</option>
-                </select>
-              </div>
-
-              <div class="col-md-4">
-                <select class="form-select" id="state" required="">
-                  <option value="">Tip nekretnine...</option>
-                  <option>Stan</option>
-                  <option>Kuća</option>
-                  <option>Zemljište</option>
-                  <option value="">Poslovni prostor</option>
-                </select>
-              </div>
-
-              <div class="col-md-3">
-                <select class="form-select" id="nrbitno" required="">
-                  <option value="" selected>Kupujem/Zakupljujem...</option>
-                  <option>Kupujem</option>
-                  <option>Zakupljujem</option>
-                </select>
-              </div>
-            </div>
-
-            <hr class="my-4" />
-
-            <div class="form-check">
-              <input
-                type="checkbox"
-                class="form-check-input"
-                id="same-address"
-              />
-              <label class="form-check-label" for="same-address">Terasa</label>
-            </div>
-
-            <div class="form-check">
-              <input type="checkbox" class="form-check-input" id="save-info" />
-              <label class="form-check-label" for="save-info">Lift</label>
-            </div>
-
-            <div class="form-check">
-              <input type="checkbox" class="form-check-input" id="novo" />
-              <label class="form-check-label" for="save-info"
-                >Novogradnja</label
-              >
-            </div>
-
-            <div class="form-check">
-              <input type="checkbox" class="form-check-input" id="staro" />
-              <label class="form-check-label" for="save-info"
-                >Starogradnja</label
-              >
-            </div>
-
-            <hr class="my-4" />
-
-            <button
-              class="w-100 btn btn-primary btn-lg dugmeDrugo"
-              type="submit"
-            >
-              Pretraži
-            </button>
-          </form>
-        </div>
-        <div class="col-md-5 col-lg-4">
-          <form action="">
-            <div class="row g-5">
-              <!--SORTIRANJE-->
-            </div>
-          </form>
+      <div class="dropdown col-3 col-md-3 col-lg-2 col-xl-1 col-xxl-1">
+        <button
+          onclick="toggleDropdown()"
+          class="btn btn-outline-primary dugme dropbtn"
+        >
+          Sortiraj
+        </button>
+        <div id="myDropdown" class="dropdown-content">
+          <a class="text-uppercase" href="#">Najnovije prvo</a>
+          <a class="text-uppercase" href="#">Najskuplje prvo</a>
+          <a class="text-uppercase" href="#">Najjeftinije prvo</a>
         </div>
       </div>
     </div>
   </div>
-</form>
+</div>
+
+<!--Za Slider i Dropdown-->
+<script>
+  //Slider
+  const slider = document.getElementById("myRange");
+  const output = document.getElementById("sliderValue");
+
+  // Display the default slider value
+  output.innerHTML = slider.value;
+
+  // Update the current slider value (each time the slider is dragged)
+  slider.oninput = function () {
+    output.innerHTML = this.value;
+  };
+
+  //Dropdown
+  function toggleDropdown() {
+    var dropdownMenu = document.getElementById("myDropdown");
+    dropdownMenu.classList.toggle("show");
+  }
+
+  // Close the dropdown menu if the user clicks outside of it
+  window.onclick = function (event) {
+    if (!event.target.matches(".dropbtn")) {
+      var dropdowns = document.getElementsByClassName("dropdown-content");
+      for (var i = 0; i < dropdowns.length; i++) {
+        var openDropdown = dropdowns[i];
+        if (openDropdown.classList.contains("show")) {
+          openDropdown.classList.remove("show");
+        }
+      }
+    }
+  };
+</script>
