--- a/views/stanovi/index.ejs
+++ b/views/stanovi/index.ejs
@@ -2,7 +2,7 @@
 
 <div class="album py-5 bg-body-tertiary">
   <div class="container">
-    <div class="row row-cols-1 row-cols-sm-1 row-cols-md-3 g-3">
+    <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3 g-3">
       <% for( let stan of stanovi) { %>
 
       <div class="col">
@@ -30,7 +30,16 @@
 
           <div class="card-body">
             <h5 class="fs-4 ivanFont"><%= stan.title %></h5>
+            <!--Opis-->
+            <% if(stan.description.length < 200) {%>
             <p class="card-text ivanFont"><%= stan.description %></p>
+            <% } else { %>
+            <p class="card-text ivanFont">
+              <% for (var i=0; i < 200;i++) {%><%= stan.description[i]; %><% }
+              %> ...
+            </p>
+            <% } %>
+
             <div class="d-flex justify-content-between align-items-center">
               <div class="btn-group">
                 <a
@@ -69,10 +78,10 @@
 <% if (stanovi.length > 0) { %>
 <div class="mb-3 bg-body-tertiary">
   <nav aria-label="Dashboard Pagination">
-    <ul class="pagination pagination-circle justify-content-center mt-5">
+    <ul class="pagination justify-content-center mt-5">
       <% if (current == 1) { %>
 
-      <li class="page-item disabled">
+      <li class="page-item active">
         <a href="/stanovi" class="page-link">Prva</a>
       </li>
 
@@ -84,13 +93,13 @@
       <% } %> <% var i = (Number(current) > 5 ? Number(current) - 4 : 1) %> <%
       if(i !== 1) { %>
 
-      <li class="page-item disabled">
+      <li class="page-item active">
         <a href="#" class="page-link">...</a>
       </li>
       <% } %> <% for(; i <= (Number(current) + 4) && i <= pages; i++ ) { %> <%
       if(i == current) { %>
 
-      <li class="page-item disabled">
+      <li class="page-item active">
         <a href="#" class="page-link"><%= i %></a>
       </li>
 
@@ -102,12 +111,12 @@
 
       <% } %> <% if (i == Number(current) + 4 && i < pages) { %>
 
-      <li class="page-item disabled">
+      <li class="page-item active">
         <a href="#" class="page-link">...</a>
       </li>
 
       <% } %> <% } %> <% if (current == pages) { %>
-      <li class="page-item disabled">
+      <li class="page-item active">
         <a href="#" class="page-link">Poslednja</a>
       </li>
       <% } else { %>
