--- a/views/stanovi/new.ejs
+++ b/views/stanovi/new.ejs
@@ -208,59 +208,82 @@
       </div>
 
       <div class="mb-3">
-        <label class="form-label" for="types">Sta sve ima</label>
+        <label class="form-label" for="daProvizija">Sta sve ima</label>
 
         <div class="form-check">
           <input
             class="form-check-input"
             type="checkbox"
-            value=""
-            id="Provizija"
+            value="true"
+            id="daProvizija"
+            name="stan[daProvizija]"
           />
-          <label class="form-check-label" for="Provizija">
+          <label class="form-check-label" for="provizija">
             Sa provizijom
           </label>
         </div>
+
         <div class="form-check">
           <input
             class="form-check-input"
             type="checkbox"
-            value=""
-            id="NeProvizija"
+            value="true"
+            id="bezProvizija"
+            name="stan[bezProvizija]"
           />
-          <label class="form-check-label" for="NeProvizija">
+          <label class="form-check-label" for="bezProvizija">
             Bez provizije
           </label>
         </div>
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="Kuca" />
-          <label class="form-check-label" for="Kuca"> Kuca </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="Flat" />
-          <label class="form-check-label" for="Flat"> Stan </label>
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" value="" id="Lift" />
-          <label class="form-check-label" for="Lift"> Lift </label>
+          <input
+            class="form-check-input"
+            type="checkbox"
+            value="true"
+            id="kuca"
+            name="stan[kuca]"
+          />
+          <label class="form-check-label" for="kuca"> Kuca </label>
         </div>
         <div class="form-check">
           <input
             class="form-check-input"
             type="checkbox"
-            value=""
-            id="Terasa"
+            value="true"
+            id="stancic"
+            name="stan[stancic]"
           />
-          <label class="form-check-label" for="Terasa"> Terasa </label>
+          <label class="form-check-label" for="stancic"> Stan </label>
         </div>
         <div class="form-check">
           <input
             class="form-check-input"
             type="checkbox"
-            value=""
-            id="Novogradnja"
+            value="true"
+            id="lift"
+            name="stan[lift]"
           />
-          <label class="form-check-label" for="Novogradnja">
+          <label class="form-check-label" for="lift"> Lift </label>
+        </div>
+        <div class="form-check">
+          <input
+            class="form-check-input"
+            type="checkbox"
+            value="true"
+            id="terasa"
+            name="stan[terasa]"
+          />
+          <label class="form-check-label" for="terasa"> Terasa </label>
+        </div>
+        <div class="form-check">
+          <input
+            class="form-check-input"
+            type="checkbox"
+            value="true"
+            id="novogradnja"
+            name="stan[novogradnja]"
+          />
+          <label class="form-check-label" for="novogradnja">
             Novogradnja
           </label>
         </div>
@@ -268,10 +291,11 @@
           <input
             class="form-check-input"
             type="checkbox"
-            value=""
-            id="Starogradnja"
+            value="true"
+            id="starogradnja"
+            name="stan[starogradnja]"
           />
-          <label class="form-check-label" for="Starogradnja">
+          <label class="form-check-label" for="starogradnja">
             Stara gradnja
           </label>
         </div>
@@ -279,19 +303,21 @@
           <input
             class="form-check-input"
             type="checkbox"
-            value=""
-            id="Zemljiste"
+            value="true"
+            id="zemljiste"
+            name="stan[zemljiste]"
           />
-          <label class="form-check-label" for="Zemljiste"> Zemljiste </label>
+          <label class="form-check-label" for="zemljiste"> Zemljiste </label>
         </div>
         <div class="form-check">
           <input
             class="form-check-input"
             type="checkbox"
-            value=""
-            id="PoslProstor"
+            value="true"
+            id="poslovniProstor"
+            name="stan[poslovniProstor]"
           />
-          <label class="form-check-label" for="PoslProstor">
+          <label class="form-check-label" for="poslovniProstor">
             Poslovni prostor
           </label>
         </div>
