--- a/views/stanovi/edit.ejs
+++ b/views/stanovi/edit.ejs
@@ -26,6 +26,24 @@
       </div>
 
       <div class="mb-3">
+        <label class="form-label" for="type">Tip nekretnine</label>
+        <select
+          class="form-select"
+          id="type"
+          name="stan[type]"
+          aria-label="Default select example"
+          required
+        >
+          <option value="<%= stan.type %>" selected><%= stan.type %></option>
+          <option value="Stan">Stan</option>
+          <option value="Kuca">Kuća</option>
+          <option value="PoslovniProstor">Poslovni Prostor</option>
+          <option value="Zemljiste">Zemljiste</option>
+        </select>
+        <div class="valid-feedback">Izgleda dobro</div>
+      </div>
+
+      <div class="mb-3">
         <label class="form-label" for="title">Naziv/Naslov</label>
         <input
           class="form-control"
@@ -245,26 +263,7 @@
             Bez provizije
           </label>
         </div>
-        <div class="form-check">
-          <input
-            class="form-check-input"
-            type="checkbox"
-            value="true"
-            id="kuca"
-            name="stan[kuca]"
-          />
-          <label class="form-check-label" for="kuca"> Kuca </label>
-        </div>
-        <div class="form-check">
-          <input
-            class="form-check-input"
-            type="checkbox"
-            value="true"
-            id="stancic"
-            name="stan[stancic]"
-          />
-          <label class="form-check-label" for="stancic"> Stan </label>
-        </div>
+
         <div class="form-check">
           <input
             class="form-check-input"
@@ -307,28 +306,6 @@
           />
           <label class="form-check-label" for="starogradnja">
             Stara gradnja
-          </label>
-        </div>
-        <div class="form-check">
-          <input
-            class="form-check-input"
-            type="checkbox"
-            value="true"
-            id="zemljiste"
-            name="stan[zemljiste]"
-          />
-          <label class="form-check-label" for="zemljiste"> Zemljiste </label>
-        </div>
-        <div class="form-check">
-          <input
-            class="form-check-input"
-            type="checkbox"
-            value="true"
-            id="poslovniProstor"
-            name="stan[poslovniProstor]"
-          />
-          <label class="form-check-label" for="poslovniProstor">
-            Poslovni prostor
           </label>
         </div>
       </div>
