--- a/views/home.ejs
+++ b/views/home.ejs
@@ -116,6 +116,7 @@
             class="mask"
             style="background-color: rgba(250, 182, 162, 0.15)"
           ></div>
+          <div class="h1 ivanPlava ivanFont font-weight-bold text-overlay">Sa nama ste bezbedni !</div>
         </div>
         <!-- Intro -->
       </section>
