--- a/views/stanovi/indexBackup.ejs
+++ b/views/stanovi/indexBackup.ejs
@@ -2,14 +2,10 @@
 
 <div class="album py-5 bg-body-tertiary">
   <div class="container">
-    <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3 g-3"
-     id="content" data-stanovi="<%= JSON.stringify(stanovi) %>" current-user="<%= JSON.stringify(currentUser) %>">
+    <div class="row row-cols-1 row-cols-sm-1 row-cols-md-2 row-cols-lg-3 g-3">
+      <% for( let stan of stanovi) { %>
 
-     
-      
-      <% for(let r = 0; (r < 0) && (r < stanovi.length); r++) { %>
-        <% stan = stanovi[r]; %>
-      <div class="col" >
+      <div class="col">
         <div class="card shadow-sm">
           <% if (stan.images.length) { %>
           <img
@@ -74,15 +70,65 @@
         </div>
       </div>
       <% } %>
-    
-    
-
-      <div id="loading" style="display: none;">Loading...</div>
     </div>
   </div>
 </div>
 
 <!--Pagination-->
+<% if (stanovi.length > 0) { %>
+<div class="mb-3 bg-body-tertiary">
+  <nav aria-label="Dashboard Pagination">
+    <ul class="pagination justify-content-center mt-5">
+      <% if (current == 1) { %>
 
+      <li class="page-item active">
+        <a href="/stanovi" class="page-link">Prva</a>
+      </li>
+
+      <% } else { %>
+
+      <li class="page-item">
+        <a href="/stanovi/?page=1" class="page-link">Prva</a>
+      </li>
+      <% } %> <% var i = (Number(current) > 5 ? Number(current) - 4 : 1) %> <%
+      if(i !== 1) { %>
+
+      <li class="page-item active">
+        <a href="#" class="page-link">...</a>
+      </li>
+      <% } %> <% for(; i <= (Number(current) + 4) && i <= pages; i++ ) { %> <%
+      if(i == current) { %>
+
+      <li class="page-item active">
+        <a href="#" class="page-link"><%= i %></a>
+      </li>
+
+      <% } else { %>
+
+      <li class="page-item">
+        <a href="/stanovi/?page=<%= i %>" class="page-link"><%= i %></a>
+      </li>
+
+      <% } %> <% if (i == Number(current) + 4 && i < pages) { %>
+
+      <li class="page-item active">
+        <a href="#" class="page-link">...</a>
+      </li>
+
+      <% } %> <% } %> <% if (current == pages) { %>
+      <li class="page-item active">
+        <a href="#" class="page-link">Poslednja</a>
+      </li>
+      <% } else { %>
+
+      <li class="page-item">
+        <a href="/stanovi/?page=<%= pages %>" class="page-link">Poslednja</a>
+      </li>
+
+      <% } %>
+    </ul>
+  </nav>
+</div>
+<% } %>
 
 <script src="/javascripts/infiniteScroll.js"></script>
